# airbnb-clone

./: db.sqlite3  pyproject.toml
config/: settings.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_house_pets_allowed.py  0003_rename_price_house_price_per_month.py
